--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         Would you be so obliging as to favour me with your name, dear guest?
       </p>
     <div id="element">
-      <label for="name_title" diplay="none"></label>
-      <select id="name_title" class="name_title">
+      <label for="person-title" diplay="none"></label>
+      <select id="person-title" class="person-title">
         <option value="" selected>Select title</option>
         <option value="Sir">Sir</option>
         <option value="My lady">My Lady</option>
         <option value="Your Grace">Your Grace</option>
       </select>
-      <input type="text" id="name-input" placeholder="Name" />
+      <input type="text" class="name-input" placeholder="Name" />
     </div> 
         <div id="error-box">
         <span id="title-error" class="error-msg"></span>
