Add sound effects

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
+     <audio id="intro-melody" src="assets/images/intro.mp3" preload="auto"></audio>
+
     <h1 id="title">The Regency Chronicle</h1>
 
 
