--- a/enter_name.html
+++ b/enter_name.html
@@ -19,6 +19,7 @@
 
   
     <div id="quiz-screen" class="quiz-card screen active">
+        <button id="mute-btn">🔇 Sound Off</button>
       <div class="quote" id="question-text"></div>
       <div class="quiz-info">
         <p>
