--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-     <audio id="intro-melody" src="assets/images/intro.mp3" preload="auto"></audio>
+     <audio id="intro-melody" src="assets/images/intro.mp3" preload="auto" loop></audio>
 
     <h1 id="title">The Regency Chronicle</h1>
 
 
     <div id="start-screen" class="intro-card screen active">
+        <button id="mute-btn">🔇 Sound Off</button>
         <h2>Esteemed Reader, </h2>
         <p> We bid you welcome to our humble Chronicle. We
         present, for your diversion, a little trial of wit and memory. Within
