correct some issues

--- a/enter_name.html
+++ b/enter_name.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    
+     <audio id="intro-melody" src="assets/images/intro.mp3" preload="auto" loop></audio>
    <audio id="correct-sound" src="assets/images/correct.mp3" preload="auto"></audio>
     <audio id="wrong-sound" src="assets/images/wrong.mp3" preload="auto"></audio>
 
