--- a/enter_name.html
+++ b/enter_name.html
@@ -19,7 +19,7 @@
 
   
     <div id="quiz-screen" class="quiz-card screen active">
-        <button id="mute-btn">🔇 Sound Off</button>
+        <button id="mute-btn"><i class="fa-solid fa-volume-xmark"></i> Sound Off</button>
       <div class="quote" id="question-text"></div>
       <div class="quiz-info">
         <p>
@@ -69,7 +69,7 @@
       <button class="restart-btn">Restart Quiz</button>
     </div>
   
-
+ <script src="https://kit.fontawesome.com/abdecf94a5.js" crossorigin="anonymous"></script>
     <script src="assets/js/script.js"></script>
   </body>
 </html>
