--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Dancing+Script:wght@500&display=swap"
       rel="stylesheet"
     />
+ <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-32x32.png">
+<link rel="manifest" href="/site.webmanifest">
+   
+   
+   
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
@@ -17,7 +24,7 @@
 
 
     <div id="start-screen" class="intro-card screen active">
-        <button id="mute-btn">🔇 Sound Off</button>
+        <button id="mute-btn"><i class="fa-solid fa-volume-xmark"></i> Sound Off</button>
         <h2>Esteemed Reader, </h2>
         <p> We bid you welcome to our humble Chronicle. We
         present, for your diversion, a little trial of wit and memory. Within
@@ -50,7 +57,7 @@
     </div>
       <button id="name-btn">Let us begin</button>
     </div>
-
+    <script src="https://kit.fontawesome.com/abdecf94a5.js" crossorigin="anonymous"></script>
      <script src="assets/js/enter_name.js"></script>
   </body>
 </html>
