--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
     <h1 id="title">The Regency Chronicle</h1>
 
 
-    <div id="start-screen" class="intro-card screen active">
-        <button id="mute-btn"><i class="fa-solid fa-volume-xmark"></i> Sound Off</button>
+    <div id="start-screen" class="quiz-card screen active">
+      <div id=button >
+        <button id="mute-btn"><i class="fa-solid fa-volume-xmark"></i></button>
+      </div>
         <h2>Esteemed Reader, </h2>
         <p> We bid you welcome to our humble Chronicle. We
         present, for your diversion, a little trial of wit and memory. Within
